[gd_scene load_steps=15 format=3 uid="uid://vx63dgvaox3e"]

[ext_resource type="Texture2D" uid="uid://gb5fyhgyl11y" path="res://assets/computer/pc/com_bm_pc02.png" id="1_tc1g5"]
[ext_resource type="PackedScene" uid="uid://n66g3gxaodlr" path="res://scenes/computer/box/desktop.tscn" id="2_gv6u7"]
[ext_resource type="ArrayMesh" uid="uid://dm7smdqkfm6ei" path="res://assets/computer/pc/com_bm_pc02.obj" id="2_v06p8"]
[ext_resource type="Script" path="res://scripts/computer/pc.gd" id="3_66oq6"]
[ext_resource type="AudioStream" uid="uid://rxdsudov3c6y" path="res://assets/computer/pc/pc_on_sound.mp3" id="5_5odyt"]
[ext_resource type="AudioStream" uid="uid://d1updlyxohcon" path="res://assets/computer/pc/PC close.wav" id="6_f3t7i"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_42xi2"]
albedo_texture = ExtResource("1_tc1g5")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bkl2b"]
height = 1.80189
radius = 0.394836

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tg7vp"]
albedo_color = Color(0, 0.0470588, 0.317647, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_rv3dv"]
material = SubResource("StandardMaterial3D_tg7vp")

[sub_resource type="BoxShape3D" id="BoxShape3D_teswj"]
size = Vector3(0.595712, 0.482522, 0.0304958)

[sub_resource type="Animation" id="Animation_hkm8l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Desktop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 3.24809)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Desktop:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hsvj8"]
resource_name = "onoff"
length = 1.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"update_state"
}, {
"args": [false],
"method": &"update_state"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Desktop:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 3.24809), Vector3(0, 1.088, 0.842366), Vector3(0, 1.17751, 0.287477)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Desktop:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0.145, 0.145, 0.145), Vector3(0.1, 0.1, 0.001)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0raka"]
_data = {
"RESET": SubResource("Animation_hkm8l"),
"on": SubResource("Animation_hsvj8")
}

[node name="PC" type="StaticBody3D"]
script = ExtResource("3_66oq6")
on = false

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_42xi2")
mesh = ExtResource("2_v06p8")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.901544, -0.028173)
visible = false
shape = SubResource("CylinderShape3D_bkl2b")

[node name="Desktop" parent="." instance=ExtResource("2_gv6u7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.24809)
color = Color(0.678431, 0.596078, 0.356863, 1)

[node name="MonitorArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 131072

[node name="Mesh" type="MeshInstance3D" parent="MonitorArea"]
transform = Transform3D(0.297045, 0, 0, 0, -8.74228e-09, -0.240137, 0, 0.2, -1.04967e-08, 0, 1.342, 0.285)
mesh = SubResource("PlaneMesh_rv3dv")

[node name="Collision" type="CollisionShape3D" parent="MonitorArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.342, 0.285)
visible = false
shape = SubResource("BoxShape3D_teswj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Mesh")
libraries = {
"": SubResource("AnimationLibrary_0raka")
}

[node name="OnSound" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource("5_5odyt")

[node name="OffSound" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource("6_f3t7i")

[connection signal="area_entered" from="MonitorArea" to="." method="_on_monitor_entered"]
